# vscodium-prod-patcher

./: .gitignore  FEATURE_PLANS.md  Justfile  PKGBUILD  patch.py  pyproject.toml  renovate.json  vscode-xdg-patch.hook
.github/: dependabot.yml  renovate.json
.serena/: project.yml
src/vscodium_prod_patcher/: consts.py  main.py  shared.py
src/vscodium_prod_patcher/config/: command.py  main.py  schema.py  tui.py  utils.py
src/vscodium_prod_patcher/hooks/: install.py  patch.py
src/vscodium_prod_patcher/pacman/: alpm_ini.py  de.py  minipacman.py
src/vscodium_prod_patcher/patch/: command.py  main.py
src/vscodium_prod_patcher/utils/: backup.py  editor.py
tests/: test_patch_main.py
typings/: pyalpm.pyi
