[project]
name = "vscodium-prod-patcher"
version = "1.1.0"
description = "Universal patcher for VSCodium"
readme = "README.md"
authors = [
    { name = "fnrir", email = "fnr1r0@protonmail.com" }
]
license = "GPL-3.0"
requires-python = ">=3.13"
dependencies = [
    "mashumaro>=3.17",
    "tomli-w>=1.2.0",
    "pyalpm>=0.10.12",
]

[project.scripts]
vscodium-prod-patcher = "vscodium_prod_patcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
config-tui = [
    "inquirer>=3.4.1",
]
dev = [
    "flake8>=7.3.0",
    "flake8-2020>=1.8.1",
    "flake8-breakpoint>=1.1.0",
    "flake8-bugbear>=24.12.12",
    "flake8-builtins>=3.1.0",
    "flake8-commas>=4.0.0",
    "flake8-comments>=0.1.2",
    "flake8-eradicate>=1.5.0",
    "flake8-executable>=2.1.3",
    "flake8-fixme>=1.1.1",
    "flake8-isort>=7.0.0",
    "flake8-plugin-utils>=1.3.3",
    "flake8-raise>=0.0.5",
    "flake8-simplify>=0.30.0",
    "flake8-super>=0.1.3",
    "isort>=8.0.1",
    "mypy>=1.15.0",
    "prek>=0.3.4",
    "pylint>=4.0.5",
    "ruff>=0.15.10",
    "types-toml>=0.10.8.20260408",
]
